Added K8 support and fixed bugs

--- a/Fac.Presentation/ClientApp/src/app/home/home.component.html
+++ b/Fac.Presentation/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <p>Submit MIB <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="submitMib()"></button>
-<p>Submit Decision <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="submitCaseDecision()"></button>
+<!-- <p>Submit Decision <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="submitCaseDecision()"></button>
 <p>Submit Case <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="submitCase()"></button>
-<p>Generate Naar Split <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="generateSplit()"></button>
+<p>Generate Naar Split <button pButton pRipple type="button" label="Submit" class="p-button-rounded" (click)="generateSplit()"></button> -->
